# simote

./: .gitignore  README.md  main.c  meson.build  meson_options.txt
client/: .meson.build.swp  decode.c  decode.h  frame.c  frame.h  input.c  input.h  main.c  meson.build  network.c  network.h  receive.c  receive.h  render.c  render.h  rtp.c  rtp.h
server/: input.c  input.h  main.c  meson.build  network.c  network.h  rtp.sh
